BB-8119: FrontStore > All pages - layout is broken after switch between mobile and desktop view in Custome theme (BB-7002) - Make refactoring of scss files - Fix sticky panel in custom theme - Fix broken layout in custom theme - Fix displaying and position of logo on mobile devices - Fix categories menu section

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/page-main.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/page-main.scss
@@ -9,7 +9,7 @@
     }
 
     &__header {
-        min-height: 40px;
+        min-height: $page-main-header-min-height;
     }
 
     &.offset-none {
